# cosmic-tailscale

./: Cargo.toml  README.md  justfile
resources/: applet-settings.json  io.github.reality2_roycdavies.cosmic-tailscale.desktop
src/: applet.rs  config.rs  lib.rs  main.rs  settings.rs  settings_cli.rs  settings_page.rs  tailscale.rs
